-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
We hit a client crash with 2.7.x series client vs 2.5.x Server.
Feb 22 08:18:27 nb-0369 kernel: [6707384.065071] LustreError: 32657:0:(mdc_lib.c:137:mdc_pack_name()) ASSERTION( lu_name_is_valid_2(buf, cpy_len) ) failed: Feb 22 08:18:27 nb-0369 kernel: [6707384.079827] LustreError: 32657:0:(mdc_lib.c:137:mdc_pack_name()) LBUG Feb 22 08:18:27 nb-0369 kernel: [6707384.089644] Pid: 32657, comm: gmx Feb 22 08:18:27 nb-0369 kernel: [6707384.095804] Feb 22 08:18:27 nb-0369 kernel: [6707384.095804] Call Trace: Feb 22 08:18:27 nb-0369 kernel: [6707384.105031] [<ffffffffc0c1480e>] libcfs_call_trace+0x4e/0x60 [libcfs] Feb 22 08:18:27 nb-0369 kernel: [6707384.114814] [<ffffffffc0c14dcc>] lbug_with_loc+0x4c/0xc0 [libcfs] Feb 22 08:18:27 nb-0369 kernel: [6707384.124180] [<ffffffffc0e43ce2>] mdc_pack_name+0xd2/0x1c0 [mdc] Feb 22 08:18:27 nb-0369 kernel: [6707384.133261] [<ffffffffc0e448ab>] mdc_open_pack+0x20b/0x2a0 [mdc] Feb 22 08:18:27 nb-0369 kernel: [6707384.142424] [<ffffffffc0e4802e>] mdc_enqueue+0x7de/0x1920 [mdc] Feb 22 08:18:27 nb-0369 kernel: [6707384.151508] [<ffffffff810bdc4b>] ? __wake_up_common+0x5b/0x90 Feb 22 08:18:27 nb-0369 kernel: [6707384.160820] [<ffffffffc0e495bb>] mdc_intent_lock+0x25b/0x510 [mdc] Feb 22 08:18:27 nb-0369 kernel: [6707384.170151] [<ffffffffc084de39>] ? fld_client_lookup+0x79/0x440 [fld] Feb 22 08:18:27 nb-0369 kernel: [6707384.179781] [<ffffffffc11611b0>] ? ll_md_blocking_ast+0x0/0x7f0 [lustre] Feb 22 08:18:27 nb-0369 kernel: [6707384.189672] [<ffffffffc0cf0ef0>] ? ldlm_completion_ast+0x0/0x910 [ptlrpc] Feb 22 08:18:27 nb-0369 kernel: [6707384.199603] [<ffffffffc1079525>] lmv_intent_lock+0x5e5/0x1bb0 [lmv] Feb 22 08:18:27 nb-0369 kernel: [6707384.208980] [<ffffffffc0d2cb06>] ? ptlrpc_update_next_ping+0x46/0xa0 [ptlrpc] Feb 22 08:18:27 nb-0369 kernel: [6707384.219272] [<ffffffff81118892>] ? from_kgid+0x12/0x20 Feb 22 08:18:27 nb-0369 kernel: [6707384.227324] [<ffffffffc1161d87>] ? ll_i2suppgid+0x37/0x40 [lustre] Feb 22 08:18:27 nb-0369 kernel: [6707384.236497] [<ffffffffc1161dc3>] ? ll_i2gids+0x33/0xb0 [lustre] Feb 22 08:18:27 nb-0369 kernel: [6707384.245302] [<ffffffff81118892>] ? from_kgid+0x12/0x20 Feb 22 08:18:27 nb-0369 kernel: [6707384.253236] [<ffffffffc1149ba2>] ? ll_prep_md_op_data+0x222/0x570 [lustre] Feb 22 08:18:27 nb-0369 kernel: [6707384.263088] [<ffffffffc11611b0>] ? ll_md_blocking_ast+0x0/0x7f0 [lustre] Feb 22 08:18:27 nb-0369 kernel: [6707384.272721] [<ffffffffc112d47e>] ll_intent_file_open.isra.49+0x16e/0xfb0 [lustre] Feb 22 08:18:27 nb-0369 kernel: [6707384.283178] [<ffffffff811e4092>] ? kmem_cache_alloc+0x1c2/0x1f0 Feb 22 08:18:27 nb-0369 kernel: [6707384.291865] [<ffffffffc112e523>] ll_file_open+0x263/0xea0 [lustre] Feb 22 08:18:27 nb-0369 kernel: [6707384.300814] [<ffffffff81202f8a>] do_dentry_open+0x1aa/0x2e0 Feb 22 08:18:27 nb-0369 kernel: [6707384.309110] [<ffffffff812b7802>] ? security_inode_permission+0x22/0x30 Feb 22 08:18:27 nb-0369 kernel: [6707384.318479] [<ffffffffc112e2c0>] ? ll_file_open+0x0/0xea0 [lustre] Feb 22 08:18:27 nb-0369 kernel: [6707384.327407] [<ffffffff8120315a>] vfs_open+0x5a/0xb0 Feb 22 08:18:27 nb-0369 kernel: [6707384.334815] [<ffffffff81210fc8>] ? may_open+0x68/0x110 Feb 22 08:18:27 nb-0369 kernel: [6707384.342485] [<ffffffff812144bd>] do_last+0x1ed/0x12c0
The problem is we are trying to access dentry name directly
and pass it down without holding @d_lock.
- is related to
-
LU-12169 Assertion on mdc_pack_name
-
- Resolved
-